...
            ),
        )
    }
    Column(
        modifier = Modifier
            .fillMaxWidth()
            .testTag("orders_detail_product_card")
            .semantics(mergeDescendants = true) {},
        verticalArrangement = Arrangement.spacedBy(8.dp),
    ) {
        items.forEach { item ->
            OrderDetailProductCard(colors, item, thumbnailLoader)
        }
...
